<resources>
    <string name="app_name">Projectx</string>
    <string name="title_activity_contractor_list">ContractorList</string>


    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="units">Units</string>
    <string name="price">Price</string>

    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
